@@ -64,6 +64,13 @@ fi
 %attr(02775, root, mock) %dir /var/lib/mock
 
 %changelog
+* Thu Nov 29 2007 Clark Williams <williams@redhat.com> - 0.8.11-1
+- fixes from mebrown:
+- 	added back -q and -v flags
+- 	print yum output by default
+- 	added --offline option
+- 	cleaned up uid handling
+
 * Mon Nov 26 2007 Michael Brown <mebrown@michaels-house.net> - 0.8.10-1
 - fix 'shell' command
 - fix a couple different selinux avc denial messages (didnt affect functionality)
